--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My first web page</title>
+    <title>Document</title>
     <style>
-      img {
-        width: 250px;
-        border-radius: 150px;
-        float: left;
-        margin-right: 10px;
-      }
-
-      .username {
-        font-weight: bold;
+      strong {
+        color: brown;
       }
     </style>
-  </head>
+ 
   <body>
-    <img src="image.jpg" alt="Photo" />
-    <p class="username">@Rokasabramavicius</p>
-    <p class="username">Jabals</p>
+</head>
+
+     <a href="company/about.html">
+         <img src="image.jpg" alt="Picture" />
+
+
+     </a>
+       
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse dolorum exercitationem aspernatur itaque, odio voluptates provident enim in pariatur sequi animi rerum quaerat dolores eos, ab&nbsp;minima natus deleniti facilis delectus asperiores, mollitia magni deserunt. Hic aliquam at sint culpa totam, consequatur aut? Obcaecati nam, sed modi exercitationem neque iste.</p>
   </body>
 </html>
