Tags-Style-Color

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
  
   <body>
 </head>
+<div style="background-color:navajowhite; width: device-width;height: 1080px;">
+  <a href="company/about.html">
+  <img src="image.jpg" alt="Picture" />
+
+
+</a>
+  </div>
 
      <a href="company/about.html">
          <img src="image.jpg" alt="Picture" />
